--- a/first.css
+++ b/first.css
@@ -24,3 +24,6 @@ h1{margin-left: 25px;}
 .div3{display: flex; flex-direction: row; padding-bottom: 30px;}
 .p4{ margin-left: 10px; padding-top: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;}
+@media screen and  (max-width:  375px) {}
+
+@media screen and (max-width:1440px){}
