--- a/first.css
+++ b/first.css
@@ -1,4 +1,4 @@
-
+body{background-color: hsl(47, 88%, 63%) ;}
 main{border: 1px solid black; border-radius: 10px;
    width: 80%; box-sizing:border-box; margin-left: 10%;
    box-shadow:10px 10px 5px black;background-color: hsl(0, 0%, 100%);
