--- a/first.css
+++ b/first.css
@@ -17,8 +17,8 @@ main{border: 1px solid black; border-radius: 10px;
 h1{margin-left: 25px;} 
 .div1{ background-color: hsl(47, 88%, 63%); margin-top: 20px; 
    margin-left: 25px; margin-right: 80%; font-size: 20px; text-align: center;
-    border-radius: 5px; display: flex; flex-direction: row;
-   padding-left: 10px; padding-bottom: 5px; padding-top: 5px;} 
+    border-radius: 5px; display:inline-block; flex-direction: row;
+   padding-left: 10px; padding-bottom: 5px; padding-top: 5px; padding-right:10px;} 
 .div2{ margin-left: 25px; font-family: Verdana, Geneva, Tahoma, sans-serif;} 
  .p3{color:hsl(0, 0%, 50%); margin-left: 25px; }
 .div3{display: flex; flex-direction: row; padding-bottom: 30px;}
