--- a/first.css
+++ b/first.css
@@ -19,11 +19,16 @@ h1{margin-left: 25px;}
    margin-left: 25px; margin-right: 80%; font-size: 20px; text-align: center;
     border-radius: 5px; display:inline-block; flex-direction: row;
    padding-left: 10px; padding-bottom: 5px; padding-top: 5px; padding-right:10px;} 
+
 .div2{ margin-left: 25px; font-family: Verdana, Geneva, Tahoma, sans-serif;} 
- .p3{color:hsl(0, 0%, 50%); margin-left: 25px; }
+
+.p3{color:hsl(0, 0%, 50%); margin-left: 25px;margin-right:10px; display: inline-block; }
+
 .div3{display: flex; flex-direction: row; padding-bottom: 30px;}
+
 .p4{ margin-left: 10px; padding-top: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;}
+
 @media screen and  (max-width:  375px) {}
 
 @media screen and (max-width:1440px){}
